Criar segurança da aplicação e adicionar entidade Cliente